# Home-Cloud-Server

./: .env.example  .gitignore  API_DOCUMENTATION.md  CHANGELOG.md  CLAUDE.md  FINAL_VERIFICATION_LOW_RISK.md  IDOR_FIX_REPORT.md  LOW_RISK_SECURITY_FIXES_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_REPORT.md  PR_SUBMISSION_GUIDE.md  README.md  SECURITY_FIXES.md  SECURITY_FIXES_BATCH1.md  SECURITY_FIXES_SUMMARY.md  SECURITY_FIX_REPORT.md  SESSION_SECURITY_FIX_REPORT.md  XSS_FIX_REPORT.md  config.py  dev.db-shm  dev.db-wal  main.py  migrate_add_user_session.py  push_to_origin.sh  pyproject.toml  requirements.in  requirements.txt  session_security_fix_report.py  verify_session_security_fixes.py  vulnerability_summary.md  wsgi.py  xss_penetration_test_report.md  xss_poc_and_fixes.md
.github/workflows/: security-audit.yml
app/: __init__.py  security_middleware.py  security_policy.py
app/models/: __init__.py  db_init.py  file.py  system.py  user.py  user_session.py
app/routes/: admin.py  api.py  auth.py  files.py  files.py.backup.20260402_185927  files_optimized.py
app/static/css/: admin.css  auth.css  core.css  files.css  mobile.css  responsive.css  style.css
app/static/js/: admin-dashboard.js  files-index.js  main.js  password.js
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html
app/templates/auth/: forgot_password.html  login.html  profile.html  register.html  reset_password.html
app/templates/auth/partials/: _auth_macros.html
app/templates/errors/: 400.html  403.html  404.html  429.html  500.html
app/templates/files/: index.html  search.html
app/templates/files/partials/: _destination_options.html  _item_rows.html  _modals.html  _search_results.html  _table_rows.html
app/utils/: db_optimization.py  file_service.py  file_utils.py  file_utils.py.backup.20260402_185927  image_utils.py  path_security.py  performance.py  security_logger.py  security_validation.py  system_monitor.py
data_remove/: update_db_paths.py  verify_db_update.py
deploy/: home-cloud.env.example
deploy/nginx/: home-cloud-lb.conf.template  home-cloud.conf.template
deploy/systemd/: home-cloud.service.template  home-cloud@.service.template
docs/: DEPLOY_WSL2_TAILSCALE.md
scripts/: check_local.ps1  enable_lb.sh  healthcheck_instances.sh  install_startup_task.ps1  migrate_storage_to_wsl.ps1  remove_startup_task.ps1  rolling_restart.sh  setup_wsl2_tailscale.sh  smoke_ui_capture.py  start_local.ps1  stop_local.ps1
security_patches/: apply_fixes.sh  xss_fix_highlight.patch
tests/: test_auth_routes.py  test_config.py  test_files_routes.py  test_smoke_ui_capture.py
